// Vitest Snapshot v1

exports[`vue 3 > fixtures > tests/fixtures/basic.vue 1`] = `
"<script setup lang=\\"ts\\">
  const props = defineProps<{
    modelValue: string
visible: boolean
  }>()

  const emit = defineEmits<{
    (evt: 'update:modelValue', value: string): void
(evt: 'update:visible', value: boolean): void
  }>()


console.log(modelValue)
modelValue = 'newValue'
</script>

<template>
  <h1>123</h1>
</template>
"
`;

exports[`vue 3 > fixtures > tests/fixtures/decls.vue 1`] = `
"<script setup lang=\\"ts\\">
  const props = defineProps<{
    modelValue: string
visible: boolean
  }>()

  const emit = defineEmits<{
    (evt: 'update:modelValue', value: string): void
(evt: 'update:visible', value: boolean): void
  }>()
let a = 'b'
</script>
"
`;
